Bug 1673917 - Rename vprintf style nsTSubstring::AppendPrintf -> AppendVprintf. r=sg

This patch also expands tests to check that the results of creating string via
both methods are consistent.

Differential Revision: https://phabricator.services.mozilla.com/D95053