xpcom/build/LateWriteChecks.cpp
@@ -60,7 +60,7 @@ class SHA1Stream {
     va_list list;
     va_start(list, aFormat);
     nsAutoCString str;
-    str.AppendPrintf(aFormat, list);
+    str.AppendVprintf(aFormat, list);
     va_end(list);
     mSHA1.update(str.get(), str.Length());
     mozilla::Unused << fwrite(str.get(), 1, str.Length(), mFile);
